Prevent border overflow

--- a/hra/patternlab/site/sass/molecules/_glossary.scss
+++ b/hra/patternlab/site/sass/molecules/_glossary.scss
@@ -92,6 +92,7 @@
         top: 0;
         left: 0;
         height: 4px;
+        max-width: 100%;
         background-color: #eee;
         opacity: 0;
     }
